<resources>
    <string name="app_name">Story App</string>
    <string name="created_by_chairullatif">Created by Chairullatif</string>
    <string name="login">Login</string>
    <string name="input_your_email">Input your email</string>
    <string name="password_minimal_8_karakter">Password must be at least 8 characters</string>
    <string name="input_your_password">Input your password</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="input_your_name">Input your name</string>
    <string name="username_is_required">Username is required</string>
    <string name="story">Story</string>
    <string name="logout">Logout</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="write_your_story_here">Write your story here</string>
    <string name="gallery">Gallery</string>
    <string name="image_back">Image back</string>
    <string name="image_preview">Image preview</string>
    <string name="image_menu">Image menu</string>
    <string name="image_ilustration">Image ilustration</string>
    <string name="image_story">Image story</string>
    <string name="detail_story">Detail Story</string>
    <string name="tidak_mendapatkan_permission">Doesn\'t get permission.</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="fill_the_story">Fill the story</string>
    <string name="uploading">Uploading...</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="language">Language</string>
    <string name="title_activity_story_maps" translatable="false">StoryMapsActivity</string>
    <string name="image_map">Image map</string>
    <string name="add_location">Add location</string>
    <string name="getting_location">Getting location...</string>
    <string name="failed_get_location">Failed to get location</string>
    <string name="retry">Retry</string>
    <string name="location" translatable="false"> %1s, %2s</string>
</resources>