<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/register"
        android:textColor="@color/colorNeutral400"
        android:textSize="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        app:tint="@color/colorNeutral400"
        android:src="@drawable/round_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/name"
        android:textColor="@color/colorNeutral400"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_outline_edittext"
        android:fontFamily="@font/montserrat"
        android:hint="@string/input_your_name"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        android:textColor="@color/colorNeutral400"
        android:textColorHint="@color/colorNeutral300"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:layout_editor_absoluteX="24dp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/email"
        android:textColor="@color/colorNeutral400"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edt_user_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.chairullatif.storyapp.customview.EditTextEmail
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_outline_edittext"
        android:fontFamily="@font/montserrat"
        android:hint="@string/input_your_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        android:textColor="@color/colorNeutral400"
        android:textColorHint="@color/colorNeutral300"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/password"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorNeutral400"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <com.chairullatif.storyapp.customview.EditTextPassword
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_outline_edittext"
        android:fontFamily="@font/montserrat"
        android:hint="@string/input_your_password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        android:textColor="@color/colorNeutral400"
        android:textColorHint="@color/colorNeutral300"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:enabled="false"
        android:text="@string/register"
        android:textColor="@color/white"
        android:minHeight="52dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>