<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textColor="@color/colorNeutral400"
        android:textSize="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_illustration_playing_vr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.chairullatif.storyapp.customview.EditTextEmail
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/input_your_email"
        android:fontFamily="@font/montserrat"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorNeutral400"
        android:textColorHint="@color/colorNeutral300"
        android:textSize="16dp"
        android:background="@drawable/bg_outline_edittext"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="24dp" />

    <com.chairullatif.storyapp.customview.EditTextPassword
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/input_your_password"
        android:background="@drawable/bg_outline_edittext"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/colorNeutral400"
        android:textSize="16dp"
        android:textColorHint="@color/colorNeutral300"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:enabled="false"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

</androidx.constraintlayout.widget.ConstraintLayout>